--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<%- include("partials/header") %>
 <body>
-    <h1>Create Your VERY OWN Todolist!</h1>
+    <h1>Happy Coffee Co.</h1>
+    <h2>Order Tracker</h2>
     <a href="/login"> Login</a>
-    <a href="/signup"> Signup</a>
+    <a href="/signup"> Create Barista Account</a>
 </body>
 </html>
