--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<%- include("partials/header") %>
 <body>
     <% if (locals.messages.errors) { %>
         <% messages.errors.forEach( el => { %>
@@ -18,9 +11,9 @@
         <% }) %>    
     <% } %>
     <form action="/login" method="POST">
-        <input type="email" name="email" placeholder="Email">
+        <input type="text" name="username" placeholder="Username">
         <input type="password" name="password" placeholder="Password">
-        <input type="submit">
+        <input type="submit" value="Log In">
     </form>
 </body>
 </html>
