--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,10 @@
 <%- include("partials/header") %>
-<body>
-    <h1>Happy Coffee Co.</h1>
-    <h2>Order Tracker</h2>
-    <a href="/login"> Login</a>
-    <a href="/signup"> Create Barista Account</a>
+<body class="flex-col">
+    <div class="container-med flex-col justify-between items-center mar-top-5">
+        <h1>Happy Coffee Co.</h1>
+        <h2>Order Tracker</h2>
+        <a href="/login"> Login</a>
+        <a href="/signup"> Create Barista Account</a>
+    </div>
 </body>
 </html>
